# EV-forest

./: .gitignore  CLAUDE.md  LICENSE  README.md  doc.md
backend/: pyproject.toml
backend/src/ev_forest/: __init__.py  chromosome.py  fitness.py  forest.py  ga.py  heatmap.py  ignition.py  nsga2.py  server.py  simulator.py  weighted_pipeline.py
backend/tests/: operators_sweep.json  param_sweep.json  plot_operators_sweep.py  plot_param_sweep.py  plot_results.py  results.json  run_experiments.py  run_operators_sweep.py  run_param_sweep.py  summarize_results.py  test_heatmap.py  test_optimizers.py  test_simulator.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: Controls.svelte  ForestCanvas.svelte  HistoryChart.svelte  ParetoChart.svelte  api.js
