[project]
name = "ev-forest"
version = "0.1.0"
description = "EV-Forest: optimize forest cuts vs fire spread with GA/NSGA-II"
readme = "README.md"
authors = [
    { name = "razvan891", email = "77638504+stefan891@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "numpy>=2.4.6",
]

[project.scripts]
ev-forest = "ev_forest.server:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
